--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
     <title>Redirect</title>
-    <meta http-equiv="refresh" content="5; url=http://downloadacar.no-ip.biz:8080/">
+    <meta http-equiv="refresh" content="8; url=http://downloadacar.no-ip.biz:8080/">
+	<style type="text/css">
+    @font-face {
+    	font-family: 'XBAND-Ruough';
+    	src: url('XBAND-Rough.ttf');
+	}
+	.xband {
+		font-family: 'XBAND-Ruough'
+	}
+	</style>
 </head>
 
-<body>
+<body style="background-color: black">
+<h1 class="xband" style="text-align:center">Stand by for redirection.</h1>
 </body>
 </html>
