--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 	.xband {
 		font-family: 'XBAND-Ruough'
 	}
+	a { color: black;
+		text-decoration: none;
+	}
 	</style>
 </head>
 
-<body style="background-color: black">
-<h1 class="xband" style="text-align:center">Stand by for redirection.</h1>
+<body>
+<h1 class="xband" style="text-align:center"><a href="http://downloadacar.no-ip.biz:8080/">Standby for redirection.</a></h1>
 </body>
 </html>
