preparing for migration

--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Redirect</title>
-    <meta http-equiv="refresh" content="8; url=http://downloadacar.no-ip.biz:8080/">
-	<style type="text/css">
-    @font-face {
-    	font-family: 'XBAND-Ruough';
-    	src: url('XBAND-Rough.ttf');
-	}
-	.xband {
-		font-family: 'XBAND-Ruough'
-	}
-	a { color: black;
-		text-decoration: none;
-	}
-	</style>
-</head>
+	<head>
+		<title>Cars</title>
+		<meta charset="UTF-8">
+		<link href="./style.css" rel="stylesheet">
+	</head>
+	<body class="noselect" style="margin:auto;width: 99%;background-color:black;max-width: 1000px;text-align: center">
+		<img src="./would.jpg" alt="Would you download a car?" style="margin:auto;width: 99%;">
+		 <!-- <img src="./wouldyou.png" style="margin:auto; width: 65%;"> -->
+<br/><br/><br/><br/><br/>
 
-<body>
-<h1 class="xband" style="text-align:center"><a href="http://downloadacar.no-ip.biz:8080/">Standby for redirection.</a></h1>
-</body>
+<div style="border-style: ridge">            
+  <a href="https://en.wikipedia.org/wiki/The_History_of_Little_Goody_Two-Shoes">          
+    <img src="no.png" alt="I wouldn't">
+    </a>  
+</div>
+<br/><br/><br/><br/>
+
+<div class="dropdown" style="padding-bottom:95px;">
+  <a href="./car.rar">Direct Download</a>                     
+	    <img id="imgRand" src="" alt="I would">         
+	<script>
+	  // random number between 1 and 100
+	  var numRand = Math.floor(Math.random()*5);
+	  document.getElementById("imgRand").src = "./yes/yes_"+numRand+".png";
+	</script>
+  </div>
+<br/>
+<br/>
+<br/>
+<noscript><img src="./wouldyou.png" alt="I would." style="width:45%"></noscript>
+<!-- <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.downloadacar.com"><img src="https://seal.beyondsecurity.com/verification-images/www.downloadacar.com/vulnerability-scanner-2.gif" alt="Website Security Test" border="0" /></a> -->
+	</body>
 </html>
