--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br/><br/><br/><br/>
 
 <div class="dropdown" style="padding-bottom:95px;">
-  <a href="./car.rar">Direct Download</a>                     
+  <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM">Direct Download</a>                     
 	    <img id="imgRand" src="" alt="I would">         
 	<script>
 	  // random number between 1 and 100
