--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="./style.css" rel="stylesheet">
 	</head>
 	<body class="noselect" style="margin:auto;width: 99%;background-color:black;max-width: 1000px;text-align: center">
-		<img src="./would.jpg" alt="Would you download a car?" style="margin:auto;width: 99%;">
+		<img src="would.jpg" alt="Would you download a car?" style="margin:auto;width: 99%;">
 		 <!-- <img src="./wouldyou.png" style="margin:auto; width: 65%;"> -->
 <br/><br/><br/><br/><br/>
 
@@ -18,7 +18,7 @@
 <br/><br/><br/><br/>
 
 <div class="dropdown" style="padding-bottom:95px;">
-  <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM">Direct Download</a>                     
+  <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM"></a>                     
 	    <img id="imgRand" src="" alt="I would">         
 	<script>
 	  // random number between 1 and 100
@@ -29,7 +29,7 @@
 <br/>
 <br/>
 <br/>
-<noscript><img src="./wouldyou.png" alt="I would." style="width:45%"></noscript>
+<noscript><img src="wouldyou.png" alt="I would." style="width:45%"></noscript>
 <!-- <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.downloadacar.com"><img src="https://seal.beyondsecurity.com/verification-images/www.downloadacar.com/vulnerability-scanner-2.gif" alt="Website Security Test" border="0" /></a> -->
 	</body>
 </html>
