--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div style="border-style: ridge">            
   <a href="https://en.wikipedia.org/wiki/The_History_of_Little_Goody_Two-Shoes">          
-    <img src="no.png" alt="I wouldn't">
+    <img src="./no.png" alt="I wouldn't">
     </a>  
 </div>
 <br/><br/><br/><br/>
