--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <br/><br/><br/><br/>
 
 <div class="dropdown" style="padding-bottom:95px;">
-  <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM"></a>                     
-	    <img id="imgRand" src="" alt="I would">         
+  <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM">                    
+	    <img id="imgRand" src="" alt="I would"></a>          
 	<script>
 	  // random number between 1 and 100
 	  var numRand = Math.floor(Math.random()*5);
