fix 'yes' img 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <br/><br/><br/><br/>
 
-<div class="dropdown" style="padding-bottom:95px;">
+<div style="border-style: ridge" style="padding-bottom:95px;">
   <a href="https://mega.nz/#!PGIHUIIR!LID9RgApMjBgoE5wwLLnYskHa4JEvSvwQiu5DKiVnKM">                    
 	    <img id="imgRand" src="" alt="I would"></a>          
 	<script>
